--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "*"
 
 [dev-packages]
 black = "*"
+flake8 = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.11"
